<resources>
    <string name="app_name">Red Calorie</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_overview">Overview</string>

    <string name="undo">Undo</string>

    <string name="overview_toolbar_title_today">Today:</string>
    <string name="overview_empty_meals">You haven\'t eaten anything today yet.</string>
    <string name="overview_meal_remove_description">Remove this meal</string>
    <string name="overview_meal_edit_description">Edit meal</string>
    <string name="overview_meal_photo_description">Photography of a meal</string>
    <string name="overview_meal_removed_undo_message">Meal removed</string>

    <string name="meal_details_title">Meal details</string>

    <string name="add_meal_title">Add new meal</string>
    <string name="add_meal_save_action">Save</string>
    <string name="add_meal_photo_description">Photography of a meal</string>
    <string name="add_meal_image_select_from_gallery">Select picture from gallery</string>
    <string name="add_meal_image_select_from_camera">Make a picture</string>
    <string name="add_meal_image_select_title">Select picture for your meal</string>
    <string name="add_meal_image_gallery_picker">Select image source</string>
    <string name="add_meal_image_remove">Remove picture</string>
    <string name="add_meal_ingredient_photo_description">Photography of a food ingredient</string>
    <string name="add_meal_ingredient_accept_description">Finish editing ingredient amount</string>
    <string name="add_meal_ingredient_remove_description">Remove this ingredient</string>
    <string name="add_meal_ingredient_amount_hint">Amount i.e 200 g or ml</string>
    <string name="add_meal_ingredients_empty_error">You must add at least one ingredient</string>

    <string name="ingredients_title">Ingredients</string>
    <string name="ingredients_search_title">Search ingredients</string>
    <string name="ingredients_no_ingredients_yet">You haven\'t added any ingredients yet.</string>
    <string name="ingredients_search_result_empty">No matching ingredients found.</string>
    <string name="ingredients_item_edit_ingredient">Edit ingredient</string>
    <string name="ingredients_item_delete_ingredient">Delete ingredient</string>
    <string name="ingredients_remove_ingredient_dialog_title">Remove ingredient</string>
    <string name="ingredients_remove_ingredient_dialog_message">This ingredient is used somewhere in a meal. Removing this ingredient will change all meals that contains it.\nIs this what you want?</string>
    <string name="ingredients_undo_remove">Ingredient removed</string>
    <string name="ingredients_search_tag_remove_desc">Remove category from search</string>
    <string name="ingredients_item_add_to_new_meal">Add to new meal</string>
    <string name="ingredients_item_options_title">Select action</string>

    <string name="add_ingredient_title">Add Ingredient</string>
    <string name="add_ingredient_name_hint">Name</string>
    <string name="add_ingredient_remove_category">Remove category</string>
    <string name="add_ingredient_energy_density_hint">Amount of calories</string>
    <string name="add_ingredient_image_select_title">Select picture for your ingredient</string>
    <string name="add_ingredient_name_error_empty">Name cannot be empty!</string>
    <string name="add_ingredient_energy_density_error_empty">Amount has be specified!</string>
    <string name="add_ingredient_energy_density_error_zero">Amount must be greater than zero!</string>
    <string name="add_ingredient_search_name_desc">Search the Internet for this ingredient</string>
    <string name="add_ingredient_default_search_keywords">calories</string>
    <string name="add_ingredient_select_type_title">Select unit</string>

    <string name="tags_title">Categories</string>
    <string name="tags_new_tag_dialog">New category</string>
    <string name="tags_new_tag_hint">Category name</string>
    <string name="tags_remove_dialog_title">Remove category</string>
    <string name="tags_remove_information">This category is not empty. Do you really want to remove this category?</string>
    <string name="tags_no_tags_yet">You haven\'t added any categories yet.</string>
    <string name="tags_search_result_empty">No matching categories found.</string>
    <string name="tags_undo_delete_message">Category removed</string>
    <string name="tags_undo_add_message">New category added</string>
    <string name="tags_edit_tag_dialog">Edit category</string>
    <string name="tags_remove_description">Remove category</string>
    <string name="tags_edit_description">Edit category name</string>

    <string name="settings_title">Settings</string>
    <string name="settings_current_unit">Current unit:</string>
    <string name="settings_select_unit_dialog_title">Select unit</string>
    <string name="settings_unit_energy_title">Select preferred unit of energy</string>
    <string name="settings_unit_mass_title">Select preferred unit of mass</string>
    <string name="settings_unit_volume_title">Select preferred unit of volume</string>

    <string name="search_hint">Search</string>
    <string name="add_meal_name_breakfast">Breakfast</string>
    <string name="add_meal_name_lunch">Lunch</string>
    <string name="add_meal_name_dinner">Dinner</string>
    <string name="add_meal_name_supper">Supper</string>
    <string name="add_meal_time_desc">Meal time:</string>
    <string name="no_categories_to_display">No categories</string>
    <string name="add_meal_no_ingredients">No ingredients</string>
    <string name="add_weight_dialog_title">Enter today\'s weight</string>
    <string name="add_weight_dialog_hint">Enter weight</string>
    <string name="overview_fab_add_weight">Add today\'s weight</string>

    <string name="settings_category_calorie_tracking_units">Meal calories tracking units</string>
    <string name="settings_category_body_mass_tracking_unit">Body mass tracking units</string>
    <string name="settings_unit_body_mass">Select preferred unit of body mass</string>
</resources>