...
            android:textColor="?android:textColorPrimaryInverse"
            android:textSize="15sp" />
    </FrameLayout>


    <com.l4digital.fastscroll.FastScrollRecyclerView
        android:id="@+id/tags_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarFadeDuration="1000"
        app:bubbleColor="@color/colorPrimaryDark"
        app:bubbleTextColor="#ffffff"
        app:handleColor="@color/colorPrimaryDark"
...
